correct sizes of boxes and added grid-gap

--- a/grid-challenge.css
+++ b/grid-challenge.css
@@ -4,19 +4,21 @@
     box-sizing: border-box;
 }
 
-.grid-container {
+@media screen and (min-width:786px) {
+    .grid-container {
     display: grid;
     width: 100%;
     height: 100vh;
-    text-align: center;
-    text-align: left;
+    grid-gap: 10px;
+    margin: 10px;
     grid-template-areas: 
     "Header Header Header Header"
     "Aside Nav Nav Nav"
     "Aside Main Main Main"
     "Footer Footer Footer Footer";
-    grid-template-rows: 50px 1fr 30px;
-    grid-template-columns: 150 1fr;
+    grid-template-rows: 50px 1fr 2fr;
+    grid-template-columns: 300px 1fr;
+    }
 }
 
 .grid-container > header {
@@ -28,8 +30,9 @@
 
 .grid-container > nav {
     grid-area: Nav;
-    background-color: pink;
+    background-color: #FAD889;
     color: white;
+    text-align: center;
 }
 
 .grid-container > main {
